# brew-tracker

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BOOTSTRAP.md  IDENTITY.md  MATON_API.md  MEMORY.md  README.md  SKILLS.md  SOUL.md  TOOLS.md  USER.md  brew_tracker.py  pyproject.toml
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
brew_tracker/: __init__.py  config.py
brew_tracker/data/: __init__.py  repository.py
brew_tracker/models/: __init__.py  recipe.py  types.py
brew_tracker/services/: __init__.py  abv.py  costing.py  fermentation.py  pricing.py  reporting.py
tests/: conftest.py  test_abv.py  test_costing.py  test_fermentation.py  test_models_recipe.py  test_models_types.py  test_pricing.py  test_reporting.py  test_repository.py
