[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brew-tracker"
version = "0.1.0"
description = "Homebrewing recipe manager with fermentation tracking, cost analysis, and reporting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lukas Schmidt"}
]
keywords = ["homebrewing", "beer", "fermentation", "recipe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Homebrewing",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-dir]
brew_tracker = "brew_tracker"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["brew_tracker"]

[tool.coverage.report]
show_missing = true

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]